--- a/r-07-10-sourcemaps/package.json
+++ b/r-07-10-sourcemaps/package.json
@@ -6,31 +6,19 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "chart.js": "^2.7.1",
-    "dotenv": "^4.0.0",
     "live-server": "^1.2.0",
-    "object.map": "^1.0.1",
     "react": "15.6.1",
-    "react-chartjs-2": "^2.6.4",
     "react-dom": "15.6.1",
-    "react-modal": "2.2.2",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
-  },
-  "devDependencies": {
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "3.1.0"
   }
 }
